--- a/assets/style/overlay.less
+++ b/assets/style/overlay.less
@@ -9,29 +9,30 @@
   width:100%;
   height:100%;
   display:none;
-}
-#overlay #window {
-  width:80%;
-  position:relative;
-  box-shadow: #000 0px 0px 20px;
-  margin-left: 10%;
-  margin-top: 10%;
-  padding:0px;
-  height: 70%;
-  background-color: rgb(80, 103, 149);
-}
-#overlay #title {
-  height:10%;
-  background-color: rgba(0, 0, 0, 0.3);
-  font-weight: bold;
-  font-size: 110%;
-}
-#overlay #content {
-  height:90%;
-  width: 100%;
-  overflow-y: scroll;
-}
-#overlay #close {
-  width:20%;
-  margin: 10px auto;
+
+  #window {
+    width:80%;
+    position:relative;
+    box-shadow: #000 0px 0px 20px;
+    margin-left: 10%;
+    margin-top: 10%;
+    padding:0px;
+    height: 70%;
+    background-color: rgb(80, 103, 149);
+  }
+  #title {
+    height:10%;
+    background-color: rgba(0, 0, 0, 0.3);
+    font-weight: bold;
+    font-size: 110%;
+  }
+  #content {
+    height:90%;
+    width: 100%;
+    overflow-y: scroll;
+  }
+  #close {
+    width:20%;
+    margin: 10px auto;
+  }
 }
