--- a/server/templates/equipment/detail.html
+++ b/server/templates/equipment/detail.html
@@ -1,6 +1,6 @@
 {% extends '../overlay.html' %}
 
-{% block title %}{{ item.heading }}{% endblock%}
+{% block title %}{{ item.name }}{% endblock%}
 
 {% block content %}
   <div class="attacks"></div>
