--- a/server/templates/character/index.html
+++ b/server/templates/character/index.html
@@ -15,5 +15,6 @@
 
 {% block scripts %}
   {{ super() }}
+  <script src="/equipment.js"></script>
   <script src="/character.js"></script>
 {% endblock %}
