--- a/server/templates/default.html
+++ b/server/templates/default.html
@@ -26,7 +26,7 @@
     <div id="scripts">
       {% block scripts %}
         <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-        <script src="/core.js"></script>
+        <script src="/visual.min.js"></script>
       {% endblock %}
     </div>
   </body>
