Moved all remaining public assets to build job

--- a/assets/style/core.less
+++ b/assets/style/core.less
@@ -96,17 +96,17 @@ BODY {
   }
 
   & > #overworld {
-    background-image: url('icons/overworld.png'); }
+    background-image: url('img/icons/overworld.png'); }
   & > #combat {
-    background-image: url('icons/combat.png'); }
+    background-image: url('img/icons/combat.png'); }
   & > #magic {
-    background-image: url('icons/magic.png'); }
+    background-image: url('img/icons/magic.png'); }
   & > #equipment {
-    background-image: url('icons/equipment.png'); }
+    background-image: url('img/icons/equipment.png'); }
   & > #statistics {
-    background-image: url('icons/statistics.png'); }
+    background-image: url('img/icons/statistics.png'); }
   & > #debug {
-    background-image: url('icons/debug.png'); }
+    background-image: url('img/icons/debug.png'); }
 }
 
 
