Closes #36 - Add/remove multiple items in one go!

--- a/server/templates/equipment/detail.html
+++ b/server/templates/equipment/detail.html
@@ -19,6 +19,7 @@
       <div class="button drop-item">Drop</div>
       <!-- <div class="button">Give</div> -->
     {% else %}
+      <input type="number" id="count" name="count" value="1" min="1" max="999"/>
       <div class="button add-equipment">Add</div>
       <div class="button buy-equipment">Buy</div>
       <!-- <div class="button">Customize</div> -->
