Added actions to nav items and options

--- a/src/client/style/app.less
+++ b/src/client/style/app.less
@@ -3,3 +3,22 @@ body {
   background: #FFF;
   color: #333;
 }
+
+.navbar.vc-nav {
+    padding: 0;
+    font-weight: 300;
+
+    .nav-item.vc-nav-item {
+        margin: 0;
+
+        a {
+            color: #1dd153;
+            text-align: 'center';
+
+            &.selected {
+                background-color: #FFF;
+                color: black;
+            }
+        }
+    }
+}
