--- a/src/client/style/app.less
+++ b/src/client/style/app.less
@@ -22,3 +22,30 @@ body {
         }
     }
 }
+
+
+.vc-health-bar {
+    position: relative;
+    color: white;
+    text-shadow: #000 1px 1px 3px;
+    background: #999;
+    width: 100%;
+    text-align: center;
+    height: 2em;
+    margin: 4;
+
+    .vc-health-good {
+        top: 0;
+        position: absolute;
+        width: 100%; // value will change based on damage
+        height: 100%;
+        background: #F66; // value might change based on damage in the future
+    }
+    .vc-health-text {
+        top: 0;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        padding-top: 3;
+    }
+}
