Quite a few changes

--- a/src/client/style/app.less
+++ b/src/client/style/app.less
@@ -19,6 +19,10 @@ h1 {
             color: #1dd153;
             text-align: 'center';
 
+            &.disabled {
+                color: #CCCCCC;
+            }
+
             &.selected {
                 background-color: #FFF;
                 color: black;
